<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BiliVR Max</string>
    <string name="hint_video_url">粘贴 B 站链接或视频直链 URL</string>
    <string name="btn_play_sbs">VR / SBS 模式播放</string>
    <string name="btn_use_test_url">使用测试视频</string>
    <string name="title_main">BiliVR Max</string>
    <string name="subtitle_main">VR 分屏观看，也可以普通全屏播放</string>
    <string name="tap_to_pause">点击屏幕暂停/继续</string>
    <string name="error_empty_url">请输入视频 URL</string>
</resources>
